--- a/ssafy-frontend/src/assets/css/MakeSsafyAuth.css
+++ b/ssafy-frontend/src/assets/css/MakeSsafyAuth.css
@@ -11,6 +11,7 @@
 
 .ssafy-request-info {
   float: left;
+  margin-top: 25px;
   line-height: 65px;
   height: 120px;
 }
@@ -29,6 +30,7 @@
 
 .ssafy-request-btn {
   float: right;
+  margin-top: 25px;
   line-height: 80px;
   height: 120px;
 }
