--- a/ssafy-frontend/src/assets/css/SubBoardHeader.css
+++ b/ssafy-frontend/src/assets/css/SubBoardHeader.css
@@ -6,16 +6,16 @@ a {
   padding:3px 0px;
 }
 .subheader-top {
-  background-color: lightgray;
+  border-bottom: 1px solid #d6d6d6;
+  background-color: #f2f2f2;
   padding: 10px;
   padding-bottom : 0px;
   margin-bottom: 5px;
 }
 
 .subheader-section:first-child {
-  border-right: 1px solid black;
+  border-right: 1px solid #60666c;
 }
-
 
 .subheader-section-title-1,
 .subheader-section-title-2 {
