--- a/ssafy-frontend/src/assets/css/MyPage.css
+++ b/ssafy-frontend/src/assets/css/MyPage.css
@@ -9,7 +9,7 @@
 .mypage .mypage-menu {
   background-color: #FFF;
   height: 100%;
-  min-width: 250px;
+  min-width: 180px;
   border: 1px solid #d6d6d6;
 }
 
@@ -65,15 +65,17 @@ ul[class='mypost-menu'] > li:hover {
   cursor: pointer;
 }
 
-.mypage-menu > .mypage-description {
+.mypage-menu > .mypage-description,
+.mypage-menu .admin-page {
   font-size: 15px;
   font-weight: bold;
   font-family: 'Nanum Gothic', sans-serif;
-  padding-left: 14px;
-  margin-top: 30px;
+  margin-top: 20px;
+  padding: 5px 0 5px 14px;
 }
 
-.mypage-menu > .mypage-description:hover {
+.mypage-menu > .mypage-description:hover,
+.mypage-menu > .admin-page:hover {
   background: #FFF7E2;
   cursor: pointer;
 }
