--- a/ssafy-frontend/src/assets/css/AdminPage.css
+++ b/ssafy-frontend/src/assets/css/AdminPage.css
@@ -1,5 +1,63 @@
+.admin-wrapper * {
+  list-style: none;
+}
+
 .admin-wrapper {
   margin: 0 10px;
+}
+
+.admin-nav ul {
+  display: flex;
+  height: 58px;
+  padding: 0;
+  border-bottom: 1px solid #f7b157;
+}
+
+.admin-nav ul li {
+  flex: 1;
+}
+
+.admin-nav ul li:hover {
+  cursor: pointer;
+}
+
+.admin-nav ul li:first-child span {
+  border-left: 1px solid #ddd;
+}
+
+.admin-nav ul li span {
+  display: block;
+  height: 59px;
+  border: 1px solid #ddd;
+  border-left: none;
+  border-bottom: none;
+  font-size: 18px;
+  font-weight: 700;
+  font-family: 'Chivo', sans-serif;
+  color: #505050;
+  text-align: center;
+  line-height: 59px;
+  text-decoration: none;
+}
+
+.admin-nav ul li span.on {
+  position: relatvie;
+  height: 58px;
+  border-color: #f7b157;
+  border-top-width: 2px;
+  line-height: 57px;
+  border-bottom: 1px solid #fff;
+}
+
+.admin-nav ul li span.on::before {
+  content: '';
+  position: absolute;
+  left: -1px;
+  top: -2px;
+  width: 1px;
+  height: 100%;
+  background: #ffc837;
+  border-top: 2px solid #f7b157;
 }
 
 .ssafari-user-data {
