--- a/ssafy-frontend/src/assets/css/MakeSsafyAuth.css
+++ b/ssafy-frontend/src/assets/css/MakeSsafyAuth.css
@@ -1,6 +1,7 @@
 .ssafy-request-auth-title {
-  font-size: 35px;
-  font-family: 'Do Hyeon', sans-serif;
+  font-size: 30px;
+  font-family: 'Noto Sans KR', sans-serif;
+  font-weight: bold;
   text-align: center;
 }
 
