--- a/ssafy-frontend/src/assets/css/HomePage.css
+++ b/ssafy-frontend/src/assets/css/HomePage.css
@@ -14,6 +14,10 @@
   margin: 0 12%;
 }
 
+.short-page-intro {
+  z-index: 10;
+}
+
 .page-title {
   font-size: 70px;
   font-family: 'Julius Sans One';
